--- a/command_console_app/command_console_app.csproj
+++ b/command_console_app/command_console_app.csproj
@@ -9,6 +9,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>local_console</RootNamespace>
     <AssemblyName>local_console</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
